--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -1476,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1570,7 +1570,81 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 91%|█████████ | 9091/10000 [1:34:32<06:08,  2.47it/s]  "
+      "100%|██████████| 10000/10000 [1:44:15<00:00,  1.60it/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.001 MB of 0.001 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>loss</td><td>█▅▄▅▄▄▆▃▅▄▅▅▃▄▃▃▃▃▃▄▄▄▂▄▂▂▂▃▄▂▃▃▁▂▃▁▂▃▂▂</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>loss</td><td>0.72403</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Synced <strong style=\"color:#cdcd00\">10k,lr=3e-5,mark,all-lang,mul-1000-from-start-interactivejarvis</strong>: <a href=\"https://wandb.ai/bminaiev/ai4code/runs/1ecf76ps\" target=\"_blank\">https://wandb.ai/bminaiev/ai4code/runs/1ecf76ps</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20220712_105207-1ecf76ps/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved model to ./model-final.bin\n"
      ]
     }
    ],
@@ -1590,13 +1664,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "id": "H-Y-9x8yP694"
    },
    "outputs": [],
    "source": [
-    "!cp model-final.bin drive/MyDrive/ai4-code/model-10k-all-lang-mul1000.bin"
+    "# !mv model-final.bin model-10k-all-lang-mul1000-jarvis.bin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading model-10k-all-lang-mul1000-jarvis.bin\n",
+      "Uploaded 1xG0qPhArCUChFpkd3oZs3MoJ7GlMS-bw at 11.9 MB/s, total 503.8 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-10k-all-lang-mul1000-jarvis.bin"
    ]
   },
   {
