--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -1059,7 +1059,7 @@
     "                    break\n",
     "            \n",
     "\n",
-    "    batch_size = 8\n",
+    "    batch_size = 24\n",
     "    num_chunks = (len(train_markdown_cell_ids) + batch_size - 1) // batch_size\n",
     "    \n",
     "    sum_loss = 0.0\n",
@@ -1126,7 +1126,7 @@
     "#     run_train(seed)\n",
     "\n",
     "\n",
-    "def run_train_all():\n",
+    "def run_train_all_old():\n",
     "    reload_model()\n",
     "    model = Model(unixcoder_model)\n",
     "    model.zero_grad()\n",
@@ -1146,7 +1146,7 @@
     "    save_every_s = 40 * 60\n",
     "    max_run_s = 12 * 3600\n",
     "    \n",
-    "    init_wandb(name=\"10k,lr=3e-5,mark,all-lang,mul-1000-from-start\")\n",
+    "    init_wandb(name=\"5k,lr=3e-5,mark,all-lang,mul-1000,all-bs=24\")\n",
     "    w_loss = 0.0\n",
     "    \n",
     "    for id, nb_id in enumerate(tqdm(all)):\n",
@@ -1177,7 +1177,126 @@
     "id": "ZQyQfs3QDpqu"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "max_batch_size = 75\n",
+    "default_mul = 1000\n",
+    "\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class Batch:\n",
+    "    markdowns:list\n",
+    "    code:list\n",
+    "    correct_idx:list # for each markdown store idx in code\n",
+    "    \n",
+    "    def is_full(self):\n",
+    "        return len(self.markdowns) + len(self.code) + 2 > max_batch_size\n",
+    "    \n",
+    "    def append(self, cur_markdown, cur_code):\n",
+    "        self.markdowns.append(cur_markdown)\n",
+    "        if len(self.code) == 0 or self.code[-1] != cur_code:\n",
+    "            self.code.append(cur_code)\n",
+    "        self.correct_idx.append(len(self.code) - 1)\n",
+    "\n",
+    "def gen_batches(all):\n",
+    "    batches = []\n",
+    "    for id, nb_id in enumerate(tqdm(all)):\n",
+    "        nb = df.loc[nb_id]\n",
+    "        correct_order = df_orders.loc[nb_id]\n",
+    "        correct_order.append(end_token)\n",
+    "        markdown_cell_ids = get_markdown_cells(nb)\n",
+    "        \n",
+    "        def get_code(cell_id):\n",
+    "            if cell_id == end_token:\n",
+    "                return end_token\n",
+    "            return nb.loc[cell_id]['source']\n",
+    "        \n",
+    "        for pos, cell_id in enumerate(correct_order):\n",
+    "            if cell_id in markdown_cell_ids:\n",
+    "                next_code_cell = None\n",
+    "                for next_cell in correct_order[pos:]:\n",
+    "                    if next_cell not in markdown_cell_ids:\n",
+    "                        next_code_cell = next_cell\n",
+    "                        break\n",
+    "                assert next_code_cell != None\n",
+    "                if len(batches) == 0 or batches[-1].is_full():\n",
+    "                    batches.append(Batch(markdowns=[], code=[], correct_idx=[]))\n",
+    "                batches[-1].append(nb.loc[cell_id]['source'], get_code(next_code_cell))\n",
+    "    return batches\n",
+    "\n",
+    "def train_on_batch(batch, model, optimizer, scheduler):\n",
+    "    tokens = get_texts_tokens(batch.markdowns + batch.code)\n",
+    "    embeddings = model(tokens)\n",
+    "    \n",
+    "    code_vec = embeddings[len(batch.markdowns):]\n",
+    "    markdown_vec = embeddings[:len(batch.markdowns)]\n",
+    "    \n",
+    "    scores = torch.einsum(\"ab,cb->ac\", markdown_vec, code_vec) * default_mul\n",
+    "\n",
+    "    expected_order = torch.tensor(batch.correct_idx).to(device)\n",
+    "\n",
+    "    loss_fct = CrossEntropyLoss()\n",
+    "    loss = loss_fct(scores, expected_order)\n",
+    "\n",
+    "    loss.backward()\n",
+    "    torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "    optimizer.step()\n",
+    "    optimizer.zero_grad()\n",
+    "    scheduler.step() \n",
+    "    \n",
+    "    return loss.item()\n",
+    "\n",
+    "\n",
+    "def run_train_all_new():\n",
+    "    print('Start training')\n",
+    "    all = df.index.get_level_values(0).unique()\n",
+    "    batches = gen_batches(all)\n",
+    "    print('Generated batches:', len(batches))\n",
+    "    \n",
+    "    reload_model()\n",
+    "    model = Model(unixcoder_model)\n",
+    "    model.zero_grad()\n",
+    "    model.train()\n",
+    "\n",
+    "    \n",
+    "\n",
+    "    learning_rate = 3e-5\n",
+    "    epochs = 1\n",
+    "    steps = len(batches)\n",
+    "\n",
+    "    optimizer = AdamW(model.parameters(), lr=learning_rate, eps=1e-8)\n",
+    "    scheduler = get_linear_schedule_with_warmup(optimizer, num_warmup_steps = 0, num_training_steps = steps * epochs)\n",
+    "\n",
+    "    \n",
+    "    start_time = time.time()\n",
+    "    last_saved_time = start_time\n",
+    "    save_every_s = 40 * 60\n",
+    "    max_run_s = 12 * 3600\n",
+    "    \n",
+    "    init_wandb(name=(str(len(all) / 1000) + \"k,lr=3e-5,mul-\" + str(default_mul)+\",all-bs=\"+str(max_batch_size)))\n",
+    "    w_loss = 0.0\n",
+    "    \n",
+    "    for id, batch in enumerate(tqdm(batches)):\n",
+    "        cur_loss = train_on_batch(batch, model, optimizer, scheduler)\n",
+    "        \n",
+    "        w_loss = w_loss * 0.95 + cur_loss * 0.05\n",
+    "        wandb.log({'loss': w_loss})\n",
+    "        \n",
+    "        cur_time = time.time()\n",
+    "        if cur_time - last_saved_time > save_every_s:\n",
+    "            last_saved_time = cur_time\n",
+    "            save_model(model, id)\n",
+    "        \n",
+    "        if cur_time - start_time > max_run_s:\n",
+    "            print('Finishing early because of timeout')\n",
+    "            break\n",
+    "            \n",
+    "    wandb.finish()\n",
+    "    save_model(model, \"final\")\n",
+    "  \n",
+    "    \n",
+    "run_train_all_new()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1201,7 +1320,7 @@
     "    print('Going to generate model...')\n",
     "    # 2000 - half an hour\n",
     "    load_train_nbs(5000)\n",
-    "    run_train_all()\n",
+    "    run_train_all_new()\n",
     "\n",
     "# save_results()"
    ]
@@ -1214,7 +1333,7 @@
    },
    "outputs": [],
    "source": [
-    "# !mv model-final.bin model-10k-all-lang-mul1000-jarvis.bin"
+    "!mv model-final.bin model-5k-mul1000-all-bs24.bin"
    ]
   },
   {
@@ -1223,7 +1342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-10k-all-lang-mul1000-jarvis.bin"
+    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-5k-mul1000-all-bs24.bin"
    ]
   },
   {
