in progress: try different loss strategy

--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -1178,28 +1178,60 @@
    },
    "outputs": [],
    "source": [
-    "max_batch_size = 75\n",
+    "max_batch_size = 60\n",
+    "minibatch_size = 8\n",
     "default_mul = 1000\n",
     "\n",
     "from dataclasses import dataclass\n",
+    "import random\n",
     "\n",
     "@dataclass\n",
-    "class Batch:\n",
+    "class MiniBatch:\n",
     "    markdowns:list\n",
     "    code:list\n",
     "    correct_idx:list # for each markdown store idx in code\n",
-    "    \n",
-    "    def is_full(self):\n",
-    "        return len(self.markdowns) + len(self.code) + 2 > max_batch_size\n",
-    "    \n",
+    "        \n",
     "    def append(self, cur_markdown, cur_code):\n",
     "        self.markdowns.append(cur_markdown)\n",
-    "        if len(self.code) == 0 or self.code[-1] != cur_code:\n",
+    "        if cur_code in self.code:\n",
+    "            self.correct_idx.append(self.code.index(cur_code))\n",
+    "        else:\n",
     "            self.code.append(cur_code)\n",
-    "        self.correct_idx.append(len(self.code) - 1)\n",
+    "            self.correct_idx.append(len(self.code) - 1)\n",
+    "        \n",
+    "        \n",
+    "    def get_max_len(self):\n",
+    "        tokens = get_texts_tokens(self.markdowns + self.code)\n",
+    "        return len(tokens[0])\n",
+    "    \n",
+    "    def cnt(self):\n",
+    "        return len(self.markdowns) + len(self.code)\n",
+    "    \n",
+    "@dataclass \n",
+    "class Batch:\n",
+    "    mini:list\n",
+    "    sum_cnt:int\n",
+    "    \n",
+    "    def append(self, mini_batch):\n",
+    "        self.mini.append(mini_batch)\n",
+    "        self.sum_cnt += mini_batch.cnt()\n",
+    "        \n",
+    "    def get_all_tokens(self):\n",
+    "        all = []\n",
+    "        for mini in self.mini:\n",
+    "            all += mini.markdowns \n",
+    "            all += mini.code\n",
+    "        return get_texts_tokens(all)\n",
+    "        \n",
+    "@dataclass\n",
+    "class Sample:\n",
+    "    markdown:str\n",
+    "    code:str\n",
+    "    \n",
+    "\n",
     "\n",
     "def gen_batches(all):\n",
-    "    batches = []\n",
+    "    minibatches = []\n",
     "    for id, nb_id in enumerate(tqdm(all)):\n",
     "        nb = df.loc[nb_id]\n",
     "        correct_order = df_orders.loc[nb_id]\n",
@@ -1211,6 +1243,7 @@
     "                return end_token\n",
     "            return nb.loc[cell_id]['source']\n",
     "        \n",
+    "        samples = []\n",
     "        for pos, cell_id in enumerate(correct_order):\n",
     "            if cell_id in markdown_cell_ids:\n",
     "                next_code_cell = None\n",
@@ -1219,32 +1252,55 @@
     "                        next_code_cell = next_cell\n",
     "                        break\n",
     "                assert next_code_cell != None\n",
-    "                if len(batches) == 0 or batches[-1].is_full():\n",
-    "                    batches.append(Batch(markdowns=[], code=[], correct_idx=[]))\n",
-    "                batches[-1].append(nb.loc[cell_id]['source'], get_code(next_code_cell))\n",
+    "                samples.append(Sample(markdown=nb.loc[cell_id]['source'], code=get_code(next_code_cell)))\n",
+    "        random.shuffle(samples)\n",
+    "        num_chunks = (len(samples) + minibatch_size - 1) // minibatch_size\n",
+    "        \n",
+    "        for batch_samples in np.array_split(samples, num_chunks):\n",
+    "            batch = MiniBatch(markdowns=[], code=[], correct_idx=[])\n",
+    "            for sample in batch_samples:\n",
+    "                batch.append(sample.markdown, sample.code)\n",
+    "            minibatches.append(batch)\n",
+    "    minibatches.sort(key=lambda x:x.get_max_len())\n",
+    "    \n",
+    "    batches = []\n",
+    "    for b in minibatches:\n",
+    "        if len(batches) == 0 or batches[-1].sum_cnt + b.cnt() > max_batch_size:\n",
+    "            batches.append(Batch(mini=[], sum_cnt=0))\n",
+    "        batches[-1].append(b)\n",
+    "        \n",
+    "    random.shuffle(batches)        \n",
     "    return batches\n",
     "\n",
     "def train_on_batch(batch, model, optimizer, scheduler):\n",
-    "    tokens = get_texts_tokens(batch.markdowns + batch.code)\n",
+    "    tokens = batch.get_all_tokens()\n",
     "    embeddings = model(tokens)\n",
     "    \n",
-    "    code_vec = embeddings[len(batch.markdowns):]\n",
-    "    markdown_vec = embeddings[:len(batch.markdowns)]\n",
     "    \n",
-    "    scores = torch.einsum(\"ab,cb->ac\", markdown_vec, code_vec) * default_mul\n",
+    "    shift = 0\n",
+    "    sum_loss = 0.0\n",
+    "    for mini in batch.mini:\n",
+    "        markdown_vec = embeddings[shift:shift+len(mini.markdowns)]\n",
+    "        code_vec = embeddings[shift+len(mini.markdowns):shift+mini.cnt()]\n",
+    "        shift += mini.cnt()\n",
     "\n",
-    "    expected_order = torch.tensor(batch.correct_idx).to(device)\n",
+    "        scores = torch.einsum(\"ab,cb->ac\", markdown_vec, code_vec) * default_mul\n",
     "\n",
-    "    loss_fct = CrossEntropyLoss()\n",
-    "    loss = loss_fct(scores, expected_order)\n",
+    "        expected_order = torch.tensor(mini.correct_idx).to(device)\n",
     "\n",
-    "    loss.backward()\n",
-    "    torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        loss_fct = CrossEntropyLoss()\n",
+    "        loss = loss_fct(scores, expected_order)\n",
+    "\n",
+    "        sum_loss += loss.item()\n",
+    "        retai\n",
+    "        loss.backward(retain_graph=True) # TODO: think about it\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        \n",
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    scheduler.step() \n",
     "    \n",
-    "    return loss.item()\n",
+    "    return sum_loss / len(batch.mini)\n",
     "\n",
     "\n",
     "def run_train_all_new():\n",
@@ -1301,6 +1357,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_train_nbs(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1333,7 +1398,7 @@
    },
    "outputs": [],
    "source": [
-    "!mv model-final.bin model-5k-mul1000-all-bs24.bin"
+    "!mv model-final.bin model-5k-mul1000-all-bs60.bin"
    ]
   },
   {
@@ -1342,7 +1407,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-5k-mul1000-all-bs24.bin"
+    "!/home/gdrive upload -p 12wE_l-hW_ScKnP9l-cpWWRTtuC5fZD7c model-5k-mul1000-all-bs60.bin"
    ]
   },
   {
