--- a/code/ai4code_train_drive.ipynb
+++ b/code/ai4code_train_drive.ipynb
@@ -534,25 +534,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "cKNHiwafs_u_",
-    "outputId": "2c74c88d-e8a2-47b2-d03b-de92b9eb9bf4"
-   },
-   "outputs": [],
-   "source": [
-    "tokenizer = unixcoder_model.tokenizer\n",
-    "# display(tokenizer)\n",
-    "seq = tokenizer.tokenize(\"https://google.com\")\n",
-    "print(seq)\n",
-    "tokenizer.convert_tokens_to_ids(seq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "id": "LcULm314jBj-",
     "papermill": {
      "duration": 1.954704,
@@ -594,22 +575,8 @@
     "    tokens = unixcoder_model.tokenize([cell['source']],max_length=512,mode=\"<encoder-only>\")\n",
     "    source_ids = torch.tensor(tokens).to(device)\n",
     "    _,embeddings = unixcoder_model(source_ids)\n",
-    "    return torch.nn.functional.normalize(embeddings, p=2, dim=1)[0].cpu()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "CGe9DqTYjBj_",
-    "outputId": "453ee806-6c1b-45a5-fa38-12b7b80d53d7",
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    return torch.nn.functional.normalize(embeddings, p=2, dim=1)[0].cpu()\n",
+    "\n",
     "def get_text_tokens(text):\n",
     "    tokens = unixcoder_model.tokenize([text],max_length=512,mode=\"<encoder-only>\")\n",
     "    return torch.tensor(tokens).to(device)\n",
@@ -624,25 +591,6 @@
     "    _,embeddings = unixcoder_model(source_ids)\n",
     "    return torch.nn.functional.normalize(embeddings, p=2, dim=1).cpu()[0]\n",
     "    \n",
-    "get_texts_tokens(['END'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "4igr2OZFjBj_",
-    "papermill": {
-     "duration": 5.202493,
-     "end_time": "2022-05-22T21:58:59.401928",
-     "exception": false,
-     "start_time": "2022-05-22T21:58:54.199435",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "@torch.no_grad()\n",
     "def get_nb_embeddings(nb):\n",
     "    start = time.time()\n",
@@ -665,30 +613,14 @@
     "        for key, val in zip(nb['source'].index, normalized):\n",
     "            res[key] = val\n",
     "    \n",
-    "    return res\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_3FRWpi6jBj_",
-    "papermill": {
-     "duration": 0.060091,
-     "end_time": "2022-05-22T21:58:59.509537",
-     "exception": false,
-     "start_time": "2022-05-22T21:58:59.449446",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    return res\n",
+    "\n",
+    "\n",
     "def get_source(cell_id):\n",
     "    return nb.loc[cell_id]['source']\n",
     "\n",
     "def sim(emb1, emb2):\n",
-    "    return torch.einsum(\"i,i->\", emb1, emb2).detach().numpy()"
+    "    return torch.einsum(\"i,i->\", emb1, emb2).detach().numpy()\n"
    ]
   },
   {
@@ -923,83 +855,6 @@
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
-     "height": 70
-    },
-    "id": "H90m-1dhrgeA",
-    "outputId": "76750d69-eadf-400d-a3c8-03d2d640861c"
-   },
-   "outputs": [],
-   "source": [
-    "import nltk\n",
-    "nltk.download('omw-1.4')\n",
-    "\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
-    "import re\n",
-    "# import fasttext\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from nltk.stem import WordNetLemmatizer\n",
-    "from pathlib import Path\n",
-    "import nltk\n",
-    "nltk.download('wordnet')\n",
-    "\n",
-    "stemmer = WordNetLemmatizer()\n",
-    "\n",
-    "def preprocess_text(document):\n",
-    "        # Remove all the special characters\n",
-    "        document = re.sub(r'\\W', ' ', str(document))\n",
-    "\n",
-    "        # remove all single characters\n",
-    "        document = re.sub(r'\\s+[a-zA-Z]\\s+', ' ', document)\n",
-    "\n",
-    "        # Remove single characters from the start\n",
-    "        document = re.sub(r'\\^[a-zA-Z]\\s+', ' ', document)\n",
-    "\n",
-    "        # Substituting multiple spaces with single space\n",
-    "        document = re.sub(r'\\s+', ' ', document, flags=re.I)\n",
-    "\n",
-    "        # Removing prefixed 'b'\n",
-    "        document = re.sub(r'^b\\s+', '', document)\n",
-    "\n",
-    "        # Converting to Lowercase\n",
-    "        document = document.lower()\n",
-    "        #return document\n",
-    "\n",
-    "        # Lemmatization\n",
-    "        tokens = document.split()\n",
-    "        tokens = [stemmer.lemmatize(word) for word in tokens]\n",
-    "        tokens = [word for word in tokens if len(word) > 3]\n",
-    "\n",
-    "        preprocessed_text = ' '.join(tokens)\n",
-    "        return preprocessed_text\n",
-    "\n",
-    "preprocess_text(\"hello world !!11 here is a link http://google.com\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "ooEaufiPoTti",
-    "outputId": "e8755bcc-b615-4341-87cb-133504de904d"
-   },
-   "outputs": [],
-   "source": [
-    "!pip install langdetect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
      "height": 308,
      "referenced_widgets": [
       "bdcab94b506c4a3fb4b9932465cf4878",
@@ -1020,14 +875,6 @@
    "source": [
     "from torch.nn import CrossEntropyLoss\n",
     "from transformers import get_linear_schedule_with_warmup\n",
-    "\n",
-    "from langdetect import detect\n",
-    "\n",
-    "def detect_lang(x):\n",
-    "  try:\n",
-    "    return detect(x)\n",
-    "  except:\n",
-    "    return 'other'\n",
     "\n",
     "add_end_token = True\n",
     "end_token = 'END'\n",
@@ -1277,30 +1124,35 @@
     "    embeddings = model(tokens)\n",
     "    \n",
     "    \n",
+    "    markdown_vec = []\n",
+    "    code_vec = []\n",
+    "    expected_order = []\n",
+    "    \n",
     "    shift = 0\n",
-    "    sum_loss = 0.0\n",
+    "    code_shift = 0\n",
+    "    \n",
     "    for mini in batch.mini:\n",
-    "        markdown_vec = embeddings[shift:shift+len(mini.markdowns)]\n",
-    "        code_vec = embeddings[shift+len(mini.markdowns):shift+mini.cnt()]\n",
+    "        markdown_vec += embeddings[shift:shift+len(mini.markdowns)]\n",
+    "        code_vec += embeddings[shift+len(mini.markdowns):shift+mini.cnt()]\n",
     "        shift += mini.cnt()\n",
-    "\n",
-    "        scores = torch.einsum(\"ab,cb->ac\", markdown_vec, code_vec) * default_mul\n",
-    "\n",
-    "        expected_order = torch.tensor(mini.correct_idx).to(device)\n",
-    "\n",
-    "        loss_fct = CrossEntropyLoss()\n",
-    "        loss = loss_fct(scores, expected_order)\n",
-    "\n",
-    "        sum_loss += loss.item()\n",
-    "        retai\n",
-    "        loss.backward(retain_graph=True) # TODO: think about it\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "        expected_order += [(x + code_shift) for x in mini.correct_idx]\n",
+    "        code_shift += len(mini.code)\n",
     "        \n",
+    "    scores = torch.einsum(\"ab,cb->ac\", torch.stack(markdown_vec), torch.stack(code_vec)) * default_mul\n",
+    "\n",
+    "    expected_order = torch.tensor(expected_order).to(device)\n",
+    "\n",
+    "    loss_fct = CrossEntropyLoss()\n",
+    "    loss = loss_fct(scores, expected_order)\n",
+    "\n",
+    "    loss.backward() \n",
+    "    torch.nn.utils.clip_grad_norm_(model.parameters(), 1.0)\n",
+    "    \n",
     "    optimizer.step()\n",
     "    optimizer.zero_grad()\n",
     "    scheduler.step() \n",
     "    \n",
-    "    return sum_loss / len(batch.mini)\n",
+    "    return loss.item()\n",
     "\n",
     "\n",
     "def run_train_all_new():\n",
